--- a/style.css
+++ b/style.css
@@ -130,6 +130,10 @@ header {
   background-image: linear-gradient(to bottom, #00000066, #32323266);
 }
 
+.hidden {
+  display: none;
+}
+
 .slides {
   position: relative;
   width: 100%;
@@ -250,6 +254,13 @@ header {
 .videos, .games {
   margin: 20px 0;
   padding: 0 20px;
+}
+
+.main-video {
+  /* position: absolute; */
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .feature-video,
