--- a/style.css
+++ b/style.css
@@ -223,6 +223,16 @@ header {
   transform: translate(-50%, -50%);
   cursor: pointer;
 }
+ /* .play-btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+} */
 
 .dots-container {
   background-color: transparent;
@@ -350,4 +360,37 @@ footer > p {
 footer >p:first-child{
   font-style: italic;
   font-weight: 600;
+}
+.loading-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.loading-indicator {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #5C5C5C;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
+}
+.item-img{
+  width: 130px;
+  height: 130px;
+  border-radius: 10px;
+  object-fit: cover;
 }
